--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "express-blog-intro",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -12,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1"
   }
 }
